--- a/hamdash.html
+++ b/hamdash.html
@@ -16,7 +16,7 @@
     <meta http-equiv="Pragma-directive: no-cache" />
     <meta http-equiv="Cache-directive: no-cache" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="VA3HDL Ham Radio Dashboard" />
+    <meta name="description" content="N1RIP Ham Radio Dashboard" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -27,7 +27,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@100..900&display=swap"
       rel="stylesheet"
     />
-    <title>Ham Radio Dashboard</title>
+    <title>N1RIP Dashboard</title>
     <!--
 	Hamdash
 	License: MIT
